--- a/README
+++ b/README
@@ -26,3 +26,11 @@
     * vue
         * https://github.com/posva/vim-vue
             * npm i -g eslint eslint-plugin-vue
+    * ReasonML
+        * npm i -g bs-platform
+        * brew install ocaml
+        * brew install opam hg darcs
+        * opam install merlin
+        * npm install -g reason-cli@latest-macos
+        * npm install -g ocaml-language-server
+
